changing links colors and fixing a margin problem on mobile

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -22,7 +22,9 @@
       height: 33vw;
       border-radius: $boxRadius;
       object-fit: cover;
-      margin: 0 5vw;
+      margin: 0;
+      margin-left: 5vw;
+      margin-right: 5vw;
     }
     button {
       border: none;
@@ -72,6 +74,8 @@
         width: 100%;
         height: 100%;
         border-radius: 0%;
+        margin: 0;
+
         position: relative;
         top: 0vw;
         left: 0vw;
